--- a/Oblikovanje-Teksta/stil.css
+++ b/Oblikovanje-Teksta/stil.css
@@ -1,3 +1,26 @@
 body{
     background-color: red;
+
+    padding: 20px;
+}
+
+h1{
+
+        text-align: center;
+        margin-bottom: 10px;
+}
+
+.kartica{
+
+        background-color: beige;
+        padding: 15px;
+        margin-bottom: 10px;
+        border-radius: 10px;
+
+}
+
+.font{
+
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font size: 15px;
 }
